Resolves: tdf#88792 do not hold a ScFormulaCell** in group area listener

... as the mdds storage segment may change when a formula cell is
inserted at a position such that two segments are merged into a new one.

(cherry picked from commit 47230a036fe35b9a7a7c0609232849fcbb51efcc)

add some SAL_INFO to group area listener and formula cell ctor/dtor

guess we'll need them more often..

(cherry picked from commit f8d6640afa3c8528d2a66741edc49a48c67902d3)

let have FormulaGroupAreaListener a virtual dtor

(cherry picked from commit 0fafb53d1c860388461f30e613a37c128c90ad79)

0ef149fc5edceee765419764bf0efa571ba9d977
1f5e246d68971124ef21e9c2d0db80499928998b

Change-Id: I449a89005418aff7ea12099ea931b786959dbc3b
Reviewed-on: https://gerrit.libreoffice.org/14413
Reviewed-by: Michael Meeks <michael.meeks@collabora.com>
Reviewed-by: Caolán McNamara <caolanm@redhat.com>
Tested-by: Caolán McNamara <caolanm@redhat.com>